An Kontoverwaltung weitergearbeitet. In Verwaltungskonstruktpor fehlt noch unterscheidung, ob es ein Spar oder Kreditkonto ist.

--- a/BankClient/BankClient/BankClient.csproj
+++ b/BankClient/BankClient/BankClient.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="newCreditAcc_success.xaml.cs">
+      <DependentUpon>newCreditAcc_success.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="newDepositAcc_success.xaml.cs">
+      <DependentUpon>newDepositAcc_success.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Register.xaml.cs">
       <DependentUpon>Register.xaml</DependentUpon>
     </Compile>
@@ -108,6 +114,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="newCreditAcc_success.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="newDepositAcc_success.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Register.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
