--- a/BankClient/BankClient/BankClient.csproj
+++ b/BankClient/BankClient/BankClient.csproj
@@ -59,8 +59,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Kontofunktionen\Bankstatement.xaml.cs">
+      <DependentUpon>Bankstatement.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CreditAccActions.xaml.cs">
       <DependentUpon>CreditAccActions.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Kontofunktionen\Deposit.xaml.cs">
+      <DependentUpon>Deposit.xaml</DependentUpon>
     </Compile>
     <Compile Include="DepositAccActions.xaml.cs">
       <DependentUpon>DepositAccActions.xaml</DependentUpon>
@@ -72,17 +78,8 @@
     <Compile Include="Kundendatenaenderung.xaml.cs">
       <DependentUpon>Kundendatenaenderung.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Kundendatenaenderung_success.xaml.cs">
-      <DependentUpon>Kundendatenaenderung_success.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="newCreditAcc_success.xaml.cs">
-      <DependentUpon>newCreditAcc_success.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="newDepositAcc_success.xaml.cs">
-      <DependentUpon>newDepositAcc_success.xaml</DependentUpon>
     </Compile>
     <Compile Include="Register.xaml.cs">
       <DependentUpon>Register.xaml</DependentUpon>
@@ -93,7 +90,21 @@
     <Compile Include="Startseite.xaml.cs">
       <DependentUpon>Startseite.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Kontofunktionen\Transfer.xaml.cs">
+      <DependentUpon>Transfer.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Kontofunktionen\Withdraw.xaml.cs">
+      <DependentUpon>Withdraw.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Kontofunktionen\Bankstatement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CreditAccActions.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Kontofunktionen\Deposit.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -106,10 +117,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Kundendatenaenderung.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Kundendatenaenderung_success.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -129,14 +136,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="newCreditAcc_success.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="newDepositAcc_success.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Register.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -146,6 +145,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Startseite.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Kontofunktionen\Transfer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Kontofunktionen\Withdraw.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
