--- a/BankClient/BankClient/BankClient.csproj
+++ b/BankClient/BankClient/BankClient.csproj
@@ -59,6 +59,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="addUser.xaml.cs">
+      <DependentUpon>addUser.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Kontofunktionen\Bankstatement.xaml.cs">
       <DependentUpon>Bankstatement.xaml</DependentUpon>
     </Compile>
@@ -93,6 +96,10 @@
     <Compile Include="Kontofunktionen\Withdraw.xaml.cs">
       <DependentUpon>Withdraw.xaml</DependentUpon>
     </Compile>
+    <Page Include="addUser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Kontofunktionen\Bankstatement.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
