--- a/Eigene_Bank_DLL_Assembly/Eigene_Bank_DLL_Assembly/packages.config
+++ b/Eigene_Bank_DLL_Assembly/Eigene_Bank_DLL_Assembly/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="RabbitMQ.Client" version="4.1.1" targetFramework="net452" />
+  <package id="RabbitMQ.ServiceModel" version="3.6.6" targetFramework="net452" />
 </packages>
