--- a/BankClient/BankClient/BankClient.csproj
+++ b/BankClient/BankClient/BankClient.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D65E8CC6-1CB6-4EA4-8055-6E68B77EFF5C}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BankClient</RootNamespace>
     <AssemblyName>BankClient</AssemblyName>
